log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:02:13 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:30: error: implicit declaration of function ‘EXIT’ [-Wimplicit-function-declaration]
   31 |     if(grafo == NULL) return EXIT(exit_falue);
      |                              ^~~~
graph.c:31:35: error: ‘exit_falue’ undeclared (first use in this function)
   31 |     if(grafo == NULL) return EXIT(exit_falue);
      |                                   ^~~~~~~~~~
graph.c:31:35: note: each undeclared identifier is reported only once for each function it appears in
graph.c:33:17: error: expected ‘;’ before ‘}’ token
   33 |     return grafo
      |                 ^
      |                 ;
   34 | }
      | ~                
800264f
